<?xml version="1.0" encoding="utf-8"?>
<!-- this is the string definitions -->
<resources>
	<string name="version">version here...</string>
	<string name="connect">Connection Provisions</string>
	<string name="browse">Browse Tag Details</string>
	<string name="contact">Contact Details</string>
	<string name="app_name">Khallware</string>
	<string name="about">Kevin D.Hall\nkhallware (r)</string>
	<string name="lit_about">About</string>
	<string name="lit_favorites">Favorites</string>
	<string name="lit_id">Identifier</string>
	<string name="lit_go">Go</string>
	<string name="lit_favorite">Favorite</string>
	<string name="lit_name">Name</string>
	<string name="lit_desc">Description</string>
	<string name="lit_org">Organization</string>
	<string name="lit_user">Username</string>
	<string name="lit_pass">Password</string>
	<string name="lit_host">Hostname</string>
	<string name="lit_connect">Connect</string>
	<string name="lit_rating">Rating</string>
	<string name="lit_email">Email</string>
	<string name="lit_phone">Phone</string>
	<string name="lit_duration">Duration</string>
	<string name="lit_start">Start Time</string>
	<string name="lit_end">End Time</string>
	<string name="lit_address">Address</string>
	<string name="lit_mask">Mode Bits</string>
	<string name="lit_play">Play</string>
	<string name="lit_lat">Latitude</string>
	<string name="lit_lon">Longitude</string>
	<string name="lit_url">URL</string>
	<string name="lit_title">Title</string>
	<string name="lit_parent">Parent</string>
	<string name="lit_tags">Tags</string>
	<string name="lit_choosegeo">(Khallware) Choose a location.</string>
	<string name="lit_update">Update</string>
	<string name="lit_delete">Delete</string>
	<string name="lit_goparenttag">Up</string>
	<string name="lit_gochildtag">Tags</string>
	<string name="lit_gotag">Content</string>
	<string name="lit_addtodroidcal">Add to Calendar</string>
	<string name="lit_addascontact">Add to Contacts</string>
	<string name="lit_reloadmsg">Item Failed To Load</string>
	<string name="lit_reload">Reload</string>
	<string name="lit_contacts">Contacts</string>
	<string name="lit_postcontacts">Post Address Book</string>
	<string name="lit_postevents">Post Calendar</string>
	<string name="lit_replacecontacts">Replace Address Book</string>
	<string name="lit_replaceevents">Replace Calendar</string>
	<string name="lit_bookmarks">Bookmarks</string>
	<string name="lit_blogs">Blogs</string>
	<string name="lit_events">Events</string>
	<string name="lit_fileitems">File Items</string>
	<string name="lit_locations">Locations</string>
	<string name="lit_uploadphoto">Upload Photo</string>
	<string name="lit_photos">Photos</string>
	<string name="lit_search">Search</string>
	<string name="lit_sounds">Sounds</string>
	<string name="lit_videos">Videos</string>
	<string name="lit_reconnect">Reconnect</string>
</resources>
