<?xml version="1.0" encoding="utf-8"?>
<!-- $Id$ -->
<!-- ==========================================================================
 * The Android "Khallware" application
 * (C) 2014 Kevin D.Hall
 *
 * The software, processes, trade secrets and technical/business know-how used
 * on these premises are the property of Kevin D.Hall and are not to be copied,  * divulged or used without the express written consent of the author.
 *
-->
<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		xmlns:android="http://schemas.android.com/apk/res/android" >

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_goparenttag"
				android:onClick="goParent" />
	
		<Button
				android:id="@+id/tag_btn_gochild"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_gochildtag" />
	
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_gotag"
				android:onClick="goTag" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_name" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tag_name"
				android:editable="true" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >


		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_id" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tag_id"
				android:editable="true" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_parent" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tag_parent"
				android:editable="true" />


	</LinearLayout>

</LinearLayout>

<!-- http://www.droiddraw.org/ -->
