<?xml version="1.0" encoding="utf-8"?>
<!-- $Id$ -->
<!-- ==========================================================================
 * The Android "Khallware" application
 * (C) 2014 Kevin D.Hall
 *
 * The software, processes, trade secrets and technical/business know-how used
 * on these premises are the property of Kevin D.Hall and are not to be copied,  * divulged or used without the express written consent of the author.
 *
-->
<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		xmlns:android="http://schemas.android.com/apk/res/android" >

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_name" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/contact_name"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_email" />

		<EditText
				android:autoLink="email"
				android:linksClickable="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/contact_email"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_phone" />

		<EditText
				android:autoLink="phone"
				android:linksClickable="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/contact_phone"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_title" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/contact_title"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_address" />

		<EditText
				android:autoLink="map"
				android:linksClickable="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/contact_address"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_desc" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/contact_desc"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_org" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/contact_org"
				android:focusable="false" />

	</LinearLayout>
	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lit_addascontact"
			android:onClick="goContact" />

</LinearLayout>

<!-- http://www.droiddraw.org/ -->
