<?xml version="1.0" encoding="utf-8"?>
<!-- $Id$ -->
<!-- ==========================================================================
 * The Android "Khallware" application
 * (C) 2014 Kevin D.Hall
 *
 * The software, processes, trade secrets and technical/business know-how used
 * on these premises are the property of Kevin D.Hall and are not to be copied,  * divulged or used without the express written consent of the author.
 *
-->
<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		xmlns:android="http://schemas.android.com/apk/res/android" >

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_name" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/fileitem_name"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_desc" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/fileitem_desc"
				android:focusable="false" />

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			xmlns:android="http://schemas.android.com/apk/res/android" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lit_id" />

		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/fileitem_id"
				android:focusable="false" />

	</LinearLayout>
</LinearLayout>

<!-- http://www.droiddraw.org/ -->
